<resources>
    <string name="app_name">Linkyi Shop</string>
    <string name="title_product">Product</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_linkyi">Linkyi</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_signup_page">Daftar</string>
    <string name="subjudul">Buat Akun Terlebih dahulu</string>
    <string name="name">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signupButton">Daftar</string>
    <string name="title_login_page">Masuk</string>
    <string name="subjudul2">Masukan Email dan Password</string>
    <string name="loginButton">Masuk</string>
    <string name="login_with_google">Login dengan Google</string>
    <string name="forgot_password">Lupa Password ?</string>
    <string name="or">Atau</string>
    <string name="dont_have_account">Belum punya Akun?</string>
    <string name="sign_up_text">Daftar</string>
    <string name="have_account">Sudah punya akun?</string>
    <string name="login_text">Masuk</string>
    <string name="title_menu_1">Menu 1</string>
    <string name="desc_menu_1">desc1</string>
    <string name="title_menu_2">menu 2</string>
    <string name="desc_menu_2">desc2</string>
    <string name="title_menu_3">menu 3</string>
    <string name="desc_menu_3">desc3</string>
    <string name="title_menu_4">menu 4</string>
    <string name="desc_menu_4">desc4</string>
    <string name="learn_now">learn now</string>
    <string name="title_welcome_page">Selamat Datang di Linkyi Shop</string>
    <string name="message_welcome_page">Linkyi Shop Teman UMKM</string>
    <string name="otp_verification">Masukan Kode OTP</string>
    <string name="verifikasi">Verifikasi</string>
    <string name="resend_otp">Kirim Ulang</string>
    <string name="errorOTP">Kode OTP tidak valid</string>
    <string name="validasiRegister">Semua Kolom harus diisi</string>
    <string name="otp_resent">OTP berhasil dikirim ulang</string>
    <string name="kirim">Kirim</string>
    <string name="lupa_password">Lupa Password</string>
    <string name="kembali_ke_login">Kembali</string>
    <string name="fab_content_desc">Tambah Product</string>
    <string name="logout">Logout</string>
    <string name="nama">Nama Produk</string>
    <string name="harga">Harga Barang</string>
    <string name="kategori">Kategori Produk</string>
    <string name="links">Link (tekan enter untuk terus menambahkan)</string>
    <string name="aktivasi">Aktivasi</string>
    <string name="linkyi_page">Linkyi</string>
    <string name="delete_dialog">Delete Item</string>
    <string name="supporting_text_linkyi">Apakah anda yakin ingin menghapus item ini?</string>
    <string name="cancel">Cancel</string>
    <string name="decline">Tidak</string>
    <string name="accept">Ya</string>
    <string name="detail_page">Detail Produk</string>
    <string name="link_page">Link Item</string>
    <string name="link_text">Link Text</string>
    <string name="name_text">Nama</string>
    <string name="simpan">Simpan</string>
    <string name="headline_text">Headline Text</string>
    <string name="headline_page">Headline Item</string>
    <string name="title_activity_add_linkyi">AddLinkyiActivity</string>
    <string name="tab_text_1">Link</string>
    <string name="tab_text_2">Headline</string>
    <string name="add_linkyi">Tambah Item</string>
    <string name="content_tab_home">Link</string>
    <string name="content_tab_head">Headline</string>
    <string name="generate_base_link">https://linkyi.shop</string>
    <string name="analisis_toko">Analisis Toko</string>
    <string name="total_barang">Total Barang</string>
    <string name="_0">0</string>
    <string name="total_klik">Total Klik</string>
    <string name="total_kategori">Total Kategori</string>
    <string name="total_pengunjung">Total Pengunjung</string>
    <string name="select_from_gallery">Pilih dari Galeri</string>
    <string name="take_a_picture">Ambil Gambar</string>
    <string name="submit">Kirim</string>
    <string name="lengkapi_informasi_toko">Lengkapi Informasi Toko !</string>
    <string name="nama_toko">Nama Toko</string>
    <string name="username">Username</string>
    <string name="check">Check</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="input_logo">Input Logo</string>
    <string name="get_started">Getting Started</string>
    <string name="edit_produk">Edit Produk</string>
    <string name="tambahkan">Tambahkan</string>
    <string name="ketik_link_baru">Ketik Link Baru</string>
    <string name="hapus">Hapus</string>
    <string name="password_baru">Password Baru</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="otp">OTP</string>
    <string name="update_password">Ubah Password</string>
    <string name="password_sekarang">Password Sekarang</string>
    <string name="ubah">Ubah</string>
    <string name="title">Title</string>
    <string name="category">Kategori</string>
    <string name="price">Harga</string>
    <string name="edit_toko">Edit Toko</string>
    <string name="tema">Tema</string>
    <string name="links2">Links</string>
    <string name="pilihan_tema">Pilihan Tema</string>
    <string name="update_store">Update Store</string>
    <string name="list_kategori">List Kategori</string>
    <string name="tambah_produk">Tambah Produk</string>
</resources>