<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.linkyishop.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_product"
        android:name="com.example.linkyishop.ui.product.ProductFragment"
        android:label="@string/title_product"
        tools:layout="@layout/fragment_product" />

    <fragment
        android:id="@+id/navigation_linkyi"
        android:name="com.example.linkyishop.ui.linkyi.LinkyiFragment"
        android:label="@string/title_linkyi"
        tools:layout="@layout/fragment_linkyi" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.linkyishop.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>